--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy": "https://workout-tracker-app-i3vy.onrender.com",
+  "proxy": "https://workout-tracker-app-jkr8.onrender.com",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "date-fns": "^2.29.1",
+    "dotenv": "^16.3.1",
     "frontend": "link:",
     "http-proxy-middleware": "^2.0.6",
     "mongoose": "^6.5.1",
